--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/honeo/dotjs-cache/issues"
   },
-  "homepage": "https://github.com/honeo/dotjs-cache#readme"
+  "homepage": "https://github.com/honeo/dotjs-cache#readme",
+  "dependencies": {
+    "@honeo/type-check": "^2.3.0",
+    "date-changer": "^1.0.1"
+  }
 }
